@@ -36,6 +36,7 @@ dillo-fltk2
  - Fixed a subtle bug in klist that was affecting IO.
  - Fixed the position of the Bug Meter popup menu.
  - Hooked vertical scrolling to the mouse wheel.
+ - Reimplemented plain.cc using a class, and hooked memory-release.
    Patches: Jorge Arellano
 +- Connected signals to <li> elements (fixes links within lists).
  - Enabled text, background-color and geometry in preferences.
